# cado-nfs

./: CMakeLists.txt  cado-nfs-client.py
gf2x/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
gf2x/fft/: Makefile.in
gf2x/lowlevel/: Makefile.in
gf2x/src/: Makefile.am  Makefile.in
linalg/bwc/: CMakeLists-nodist.txt  CMakeLists.txt
misc/: CMakeLists.txt  smooth_detect.cpp
parameters/dlp/: p100.hint  p35.hint  p40.hint  p45.hint  p50.hint  p55.hint  p60.hint  p65.hint  p70.hint  p75.hint  p80.hint  p85.hint  p90.hint  p95.hint
polyselect/: CMakeLists-nodist.txt
scripts/cadofactor/: api_server.py  cadoprograms.py  cadotask.py  toplevel.py  workunit.py  wudb.py
scripts/descent/: __init__.py  descent_lower_class.py  descent_middle_class.py  descent_utils.py  general_class.py
sieve/: CMakeLists.txt
sieve/ecm/: CMakeLists.txt
sieve/strategies/: CMakeLists.txt
tests/polyselect/: CMakeLists.txt
utils/: CMakeLists-nodist.txt  CMakeLists.txt
